# maptimize

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  run-coverage.sh
backend/: .coveragerc  .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.gpu  __init__.py  config.py  constraints.txt  database.py  main.py  pyproject.toml  pytest.ini  run.py
backend/migrations/: 001_add_comparison_prev_ratings.sql  002_add_uploaded_status.sql  003_add_sam_segmentation.sql  004_add_fov_segmentation_masks.sql  005_add_chat_generation_status.sql  006_add_rag_embedding_index.sql  007_add_interaction_id.sql  008_add_bbox_angle.sql  009_add_microscope.sql
backend/ml/: __init__.py  gpu_manager.py  gpu_registry.py
backend/ml/detection/: __init__.py  detector.py
backend/ml/features/: __init__.py  base_encoder.py  dinov2_encoder.py  dinov3_encoder.py  esmc_encoder.py  feature_extractor.py
backend/ml/rag/: __init__.py  constants.py  qwen_vl_encoder.py
backend/ml/segmentation/: __init__.py  sam3_encoder.py  sam_decoder.py  sam_encoder.py  sam_factory.py  utils.py
backend/models/: __init__.py  agent_memory.py  bug_report.py  cell_crop.py  chat.py  document_folder.py  experiment.py  group.py  image.py  mcp_token.py  metric.py  microscope.py  oauth_client.py  rag_document.py  ranking.py  sam_embedding.py  segmentation.py  user.py  user_settings.py
backend/routers/: __init__.py  admin.py  auth.py  bug_reports.py  chat.py  embeddings.py  experiments.py  export_import.py  folders.py  groups.py  images.py  mcp_tokens.py  metrics.py  microscopes.py  oauth.py  proteins.py  query.py  rag.py  ranking.py  segmentation.py  settings.py  user_files.py
backend/schemas/: __init__.py  admin.py  bug_report.py  chat.py  embeddings.py  experiment.py  export_import.py  group.py  image.py  mcp_token.py  metric.py  microscope.py  rag.py  ranking.py  settings.py  user.py
backend/scripts/: download_weights.py  entrypoint.sh  reindex_all_embeddings.py
backend/services/: __init__.py  annotation_converters.py  code_execution_service.py  crop_editor_service.py  data_export_service.py  document_indexing_service.py  export_service.py  gemini_agent_service.py  image_processor.py  import_service.py  job_manager.py  paper_discovery_service.py  protein_embedding_service.py  rag_service.py  segmentation_service.py  sql_query_service.py  umap_service.py  user_data_provisioning.py  visualization_service.py
backend/tests/: _coverage_import.py  _coverage_launcher.py  conftest.py  run_agent_conversations.py  test_admin.py  test_agent_questions.json  test_auth.py  test_authorization.py  test_bug_reports.py  test_chat.py  test_embeddings.py  test_experiments.py  test_export_import.py  test_image_workflow.py  test_metrics.py  test_proteins.py  test_rag.py  test_ranking_undo.py  test_sam_coordinates.py  test_segmentation.py  test_settings.py
backend/tests/unit/: conftest.py  test_annotation_converters.py  test_code_execution_service.py  test_colors.py  test_crop_rotation.py  test_document_acl.py  test_document_dedup.py  test_experiment_microscope.py  test_export_services.py  test_gemini_agent_service.py  test_image_processor.py  test_import_service.py  test_job_manager.py  test_microscope_model.py  test_microscopes_router.py  test_pair_selection.py  test_paper_discovery.py  test_protein_provisioning.py  test_qwen_pooling.py  test_rag_indexing.py  test_router_admin_settings.py  test_router_auth.py  test_router_chat.py  test_router_images.py  test_router_metrics_embeddings.py  test_router_misc.py  test_router_query.py  test_router_ranking_groups.py  test_router_user_files.py  test_segmentation_crop.py  test_sql_query_service.py  test_umap_microscope_filter.py  test_umap_visualization.py  test_utils_misc.py
backend/utils/: __init__.py  colors.py  export_helpers.py  groups.py  pair_selection.py  rate_limit.py  rating.py  security.py  tokens.py  url_safety.py
mcp-server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
mcp-server/examples/: claude_desktop_config.json
mcp-server/maptalk_mcp/: __init__.py  __main__.py  client.py  config.py  handlers.py  http_app.py  registry.py  server.py  tools.yaml
mcp-server/tests/: conftest.py  test_app_control_tools.py  test_client.py  test_handlers.py  test_http.py  test_protocol.py  test_registry.py  test_server_resources.py
(+175 files in other folders)
