[project]
name = "maptimize-backend"
version = "0.1.0"
description = "MAPtimize - Microtubule Analysis Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "redis>=5.0.0",
    "openskill>=5.1.0",
    "pillow>=10.2.0",
    "numpy>=1.26.0",
    "tifffile>=2024.1.30",
    "scipy>=1.12.0",
    "email-validator>=2.3.0",
    "greenlet>=3.3.0",
    "bcrypt>=5.0.0",
    "google-genai>=1.55.0",  # Gemini AI for chat (Interactions API)
    "pdf2image>=1.17.0",  # PDF to image conversion for RAG
    "qwen-vl-utils>=0.0.8",  # Qwen VL utilities for RAG embeddings
    # Agent tools dependencies
    "RestrictedPython>=7.0",  # Secure Python code execution sandbox
    "sqlparse>=0.5.0",  # SQL query parsing and validation
    "pandas>=2.0.0",  # Data analysis and export
    "openpyxl>=3.1.0",  # Excel export support
    "matplotlib>=3.8.0",  # Visualization charts
    "seaborn>=0.13.0",  # Statistical visualizations
    "httpx>=0.26.0",  # Async HTTP client for external APIs
    "beautifulsoup4>=4.12.0",  # Web page content extraction
    "lxml>=5.0.0",  # HTML/XML parsing
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.1.0",
    "transformers>=4.56.0",  # DINOv3 requires >=4.56, ESM-C installed with --no-deps
    "timm>=0.9.12",
    "pgvector>=0.3.0",
    "umap-learn>=0.5.7",
    "numba>=0.59.0",
    "scikit-learn>=1.4.0",
    "opencv-python-headless>=4.9.0",
    "esm>=3.0.0",  # EvolutionaryScale ESM-C for protein embeddings
    # SAM 3 dependencies
    "decord>=0.6.0",  # Video decoding
    "pycocotools>=2.0.7",  # COCO annotations format
    "hydra-core>=1.3.0",  # Configuration management
    "iopath>=0.1.10",  # File I/O abstraction
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
