[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maptalk-mcp"
version = "0.1.0"
description = "MCP server exposing maptalk (maptimize) document search, document reading and web search to Claude Code and Claude Desktop."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anyio>=4.0",
    "starlette>=0.37",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
maptalk-mcp = "maptalk_mcp.__main__:main"

[tool.setuptools]
packages = ["maptalk_mcp"]

[tool.setuptools.package-data]
maptalk_mcp = ["tools.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
